--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "mpxhf",
+  "name": "my-project",
   "version": "1.0.0",
-  "description": "mpvue中使用第三方UI组件",
-  "author": "xiaobawangl <1095185991@qq.com>",
+  "mpvueTemplateProjectVersion": "0.1.0",
+  "description": "A Mpvue project",
+  "author": "jiangshiyang <shiyang.jiang@qianli-inc.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "dev:wx": "node build/dev-server.js wx",
+    "start:wx": "npm run dev:wx",
+    "build:wx": "node build/build.js wx",
+    "dev:swan": "node build/dev-server.js swan",
+    "start:swan": "npm run dev:swan",
+    "build:swan": "node build/build.js swan",
+    "dev:tt": "node build/dev-server.js tt",
+    "start:tt": "npm run dev:tt",
+    "build:tt": "node build/build.js tt",
+    "dev:my": "node build/dev-server.js my",
+    "start:my": "npm run dev:my",
+    "build:my": "node build/build.js my",
+    "dev": "node build/dev-server.js wx",
+    "start": "npm run dev",
+    "build": "node build/build.js wx"
   },
   "dependencies": {
     "leancloud-storage": "^3.11.1",
@@ -36,16 +49,19 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
-    "mpvue-entry": "^1.2.0",
-    "mpvue-loader": "^1.0.13",
-    "mpvue-template-compiler": "^1.0.11",
-    "mpvue-webpack-target": "^1.0.0",
+    "mkdirp": "^0.5.1",
+    "mpvue-entry": "^1.5.9",
+    "mpvue-loader": "^2.0.1",
+    "mpvue-template-compiler": "^2.0.0",
+    "mpvue-webpack-target": "^1.0.3",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^2.0.0",
     "portfinder": "^1.0.13",
     "postcss-loader": "^2.1.4",
     "postcss-mpvue-wxss": "^1.0.0",
+    "prettier": "~1.12.1",
     "px2rpx-loader": "^0.1.10",
+    "relative": "^3.0.2",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.8.1",
@@ -56,7 +72,8 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
     "webpack-merge": "^4.1.0",
-    "webpack-mpvue-asset-plugin": "^0.0.2"
+    "webpack-mpvue-asset-plugin": "^2.0.0",
+    "webpack-mpvue-vendor-plugin": "^2.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
