--- a/project.config.json
+++ b/project.config.json
@@ -8,10 +8,10 @@
 		"newFeature": true,
 		"autoAudits": false
 	},
-	"miniprogramRoot": "dist/",
+	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
-	"appid": "wxe401f90ba6fd9edf",
-	"projectname": "mpvue%E5%B0%8F%E7%A8%8B%E5%BA%8F",
+	"appid": "touristappid",
+	"projectname": "my-project",
 	"condition": {
 		"search": {
 			"current": -1,
