--- a/project.config.json
+++ b/project.config.json
@@ -11,7 +11,7 @@
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
 	"appid": "wxe401f90ba6fd9edf",
-	"projectname": "clasic-read",
+	"projectname": "%E8%AF%B5%E8%AF%BB%E7%BB%8F%E5%85%B8",
 	"condition": {
 		"search": {
 			"current": -1,
