--- a/project.config.json
+++ b/project.config.json
@@ -12,6 +12,8 @@
 	"compileType": "miniprogram",
 	"appid": "wxe401f90ba6fd9edf",
 	"projectname": "%E8%AF%B5%E8%AF%BB%E7%BB%8F%E5%85%B8",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
