--- a/src/app.json
+++ b/src/app.json
@@ -8,7 +8,8 @@
     "pages/tagDetail/main",
     "pages/recite/main",
     "pages/search/main",
-    "pages/allPoetryOfPoet/main"
+    "pages/allPoetryOfPoet/main",
+    "pages/collection/main"
   ],
   "window": {
     "backgroundTextStyle": "dark",
