--- a/src/app.json
+++ b/src/app.json
@@ -13,7 +13,8 @@
     "pages/collection/main",
     "pages/creationDetail/main",
     "pages/myCreation/main",
-    "pages/myRecitation/main"
+    "pages/myRecitation/main",
+    "pages/about/main"
   ],
   "window": {
     "backgroundTextStyle": "dark",
